[package]
name = "crdt"
version = "0.1.0"
authors = ["mhallin <mhallin@gmail.com>"]
description = "A small sample of Conflict-free Replicated Data Types"
license = "MIT"
homepage = "https://github.com/mhallin/crdt-rs"

[dependencies]
rustc-serialize = "*"
uuid = "*"

[dependencies.chrono]
version = "*"
features = ["rustc-serialize"]
